--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-jazzmin==2.4.9
 gunicorn==20.1.0
 psycopg2==2.9.3
 python-decouple==3.6
+python-dotenv==0.20.0
 sqlparse==0.4.2
 tzdata==2021.5
 whitenoise==6.2.0
